--- a/404.html
+++ b/404.html
@@ -1,15 +1,8 @@
-<!DOCTYPE HTML>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Rasmus not found</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  </head>
-  <body>
-    <div class="page-content">
-      <h1><a href="/">Эхлэл</a></h1>
-      <h2>404 Уучлаарай ийм хуудас алга.</h2>
-      <p><a href="/">Эхлэл хуудасруу буцах</a></p>
-    </div>
-  </body>
-</html>
+---
+layout: default
+---
+
+<div class="page-content">
+  <h1>404 Уучлаарай ийм хуудас алга.</h1>
+  <p><a href="/">Эхлэл хуудасруу буцах</a></p>
+</div>
